@@ -70,6 +70,8 @@
     \code{\link{panel.xyplot}}.
     These arguments can also be vectors or (named) lists, see Details
     for more information.
+    Note that, except for \code{type}, these are not passed on to the
+    panel function.  See Details.
   }
   \item{auto.key}{
     a logical, or a list describing how to draw a key. See the
@@ -113,7 +115,15 @@
   \code{list(A = c(1,2), c(3,4))} in which \code{c(3, 4)} is the
   default value and \code{c(1, 2)} the value only for series \code{A}.
   The \code{screens} argument can be specified in a similar way.
-
+  
+  NOTE: unlike \code{xyplot}, the arguments \code{col, lty,
+  lwd, pch} are not passed on to the panel function. Instead, they are
+  used to define graphical settings for \code{\link{trellis.par.set}},
+  and a corresponding \code{groups} argument is passed on to the panel
+  function. 
+  %% TODO - explain reasoning behind this, gotchas etc
+  %% To think about - could col etc be passed to the panel function as well?
+  
   Some examples are given below.
 }
 
@@ -193,6 +203,5 @@ xyplot(z, screens = list(a = "primary (a)", "other (b & c)"),
   type = list(a = c("p", "h"), b = c("p", "s"), "o"),
   pch = list(a = 2, c = 3), auto.key = list(type = "o"))
 }
-
 \keyword{hplot}
 \keyword{ ts }
